Initial steps towards implementing a floating table of contents for articles

--- a/site/themes/uncontained.io/layouts/index.html
+++ b/site/themes/uncontained.io/layouts/index.html
@@ -18,7 +18,7 @@
 			{{ partial "taxonomy.html" . }}
 		</div>
 	-->
-		<div class="row">
+		<div class="row block">
 			{{ partial "contribute.html" . }}
 		</div>
 	</main>
