--- a/site/themes/uncontained.io/layouts/partials/header.html
+++ b/site/themes/uncontained.io/layouts/partials/header.html
@@ -2,22 +2,17 @@
 <html lang="{{ .Site.LanguageCode | default "en-us" }}">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>{{ .Title }} | {{ .Site.Title }}</title>
 	{{ with .Site.Params.description }}<meta name="description" content="{{ . }}">{{ end }}
 	{{ with .Site.Params.author }}<meta name="author" content="{{ . }}">{{ end }}
 	<link rel="stylesheet" href="{{ .Site.BaseURL }}dist/css/style.css">
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/github-gist.min.css">
-	<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
 	{{ if .RSSLink -}}<link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}">{{- end }}
 	{{ .Hugo.Generator }}
-	<script>
-		hljs.initHighlightingOnLoad();
-		//hljs.configure({classPrefix: 'language-'});
-	</script>
 </head>
-<body>
+<body data-spy="scroll" data-target="#toc" data-offset="0">
 	<header class="header-main">
 		<div class="container">
 			<a href="{{ .Site.BaseURL }}" class="logotype"><img  alt="{{ .Site.Title }}" src="/images/logo/Uncontained.io_Logo_Horizontal_RGB_White.png" width="400" /></a>
