--- a/site/themes/uncontained.io/layouts/_default/single.html
+++ b/site/themes/uncontained.io/layouts/_default/single.html
@@ -1,19 +1,56 @@
 {{ partial "header.html" . }}
 	<main class="container">
 		<div class="row">
-			<article>
-				<h1>{{ .Title }}</h1>
-				<div class="meta">
-					{{ partial "date.html" . }}
-					{{ partial "author.html" . }}
+			<nav id="navbar-example" class="side-nav col-sm-3">
+				<div id="toc" class="toc">
+					<div id="toctitle" class="title"></div>
+					<ul class="sectlevel1 nav nav-pills nav-stacked">
+						<li><a href="#_ldap_users_and_their_access_to_openshift">LDAP Users and their Access to OpenShift</a>
+							<ul class="sectlevel2">
+								<li><a href="#_example_ldap_tree_structure">Example LDAP Tree Structure</a></li>
+							</ul>
+						</li>
+						<li><a href="#_configure_openshift_to_use_ldap_for_user_authentication">Configure OpenShift to use LDAP for User Authentication</a>
+							<ul class="sectlevel2">
+								<li><a href="#_the_ldap_identity_provider">The LDAP Identity Provider</a></li>
+								<li><a href="#_openshift_ansible_configuration">OpenShift Ansible Configuration</a></li>
+								<li><a href="#_manual_configuration">Manual Configuration</a></li>
+							</ul>
+						</li>
+						<li><a href="#_testing_ldap_queries">Testing LDAP queries</a>
+							<ul class="sectlevel2">
+								<li><a href="#_ldapsearch">ldapsearch</a></li>
+							</ul>
+						</li>
+						<li><a href="#_whats_next">What''s Next?</a></li>
+						<li><a href="#_resources">Resources</a></li>
+					</ul>
 				</div>
 				<div>
-					{{ .Content }}
+					<div class="search-container">
+						<form action="/action_page.php">
+							<input type="text" name="search">
+							<button type="submit"><i class="icon icon-search"></i></button>
+						</form>
+					</div>
+					<div><h3>Article Contents</h3></div>
 				</div>
-			</article>
-			{{ partial "taxonomy.html" . }}
-			<div>
-				{{ template "_internal/disqus.html" . }}
+			</nav>
+			<div class="col-sm-9">
+				<article data-spy="scroll" data-target="#navbar-example">
+					<h1>{{ .Title }}</h1>
+					<div class="meta">
+						{{ partial "date.html" . }}
+						{{ partial "author.html" . }}
+					</div>
+					<div>
+						{{ .Content }}
+					</div>
+					{{ partial "taxonomy.html" . }}
+					<div>
+						{{ template "_internal/disqus.html" . }}
+					</div>
+				</article>
 			</div>
 		</div>
 	</main>
