--- a/site/themes/uncontained.io/layouts/partials/footer.html
+++ b/site/themes/uncontained.io/layouts/partials/footer.html
@@ -6,5 +6,38 @@
 			</p>
 		</div>
 	</footer>
-</body>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js" crossorigin="anonymous"></script>
+	<script>
+		hljs.initHighlightingOnLoad();
+		/*
+		$('body').scrollspy({ target: '#toc' })
+		$('[data-spy="scroll"]').each(function () {
+			var $spy = $(this).scrollspy('refresh')
+		});
+		$(".nav").each(function () {
+			var $spy = $('body').scrollspy('refresh')
+		})
+		$('[data-spy="scroll"]').on('activate.bs.scrollspy', function () {
+			// do something…
+			console.log("ScrollSpy Activated");
+		})
+
+		// Temporary hack for our TOC
+		if (window.addEventListener) { // Mozilla, Netscape, Firefox
+			window.addEventListener('load', MoveTOC, false);
+		} else if (window.attachEvent) { // IE
+			window.attachEvent('onload', MoveTOC);
+		}
+
+		function MoveTOC(event) {
+			document.getElementById('toc-parent').appendChild(  document.getElementById('toc') );
+			var nav_list = document.getElementById('toc-parent').getElementsByTagName('ul')[0];
+			nav_list.className += " nav nav-pills nav-stacked";
+		}
+		*/
+	</script>
+ 	</body>
 </html>
